bug fix, content for guess the searches
fixed image and score overlap, and added the rest of the content from higher or lower to guess the searches

--- a/higher_lower/guess_the_searches.css
+++ b/higher_lower/guess_the_searches.css
@@ -36,6 +36,7 @@ body {
     height: 70%;
     object-fit: cover;
     border-radius: 10px;
+    margin-top: 30px;
 }
 .inputs {
     display: flex;
